# -SwarmAgent

./: README.md  pyproject.toml
swarm_agent/: __init__.py
swarm_agent/agent/: __init__.py  base.py  execution.py
swarm_agent/llm/: __init__.py  base.py  openai.py
swarm_agent/spawner/: __init__.py
swarm_agent/tool/: ecosystem_registration.py  spawner_agent.py
